# modscan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  ROADMAP.md  action.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: attack-surface-gate.yml  ci.yml  extension-api-gate.yml  publish.yml
attack-surface/: action.yml
benchmarks/: README.md  ground_truth.json  score.py
benchmarks/java/: fetch.py
benchmarks/js/: package-lock.json  package.json
breaking-change/: action.yml
examples/: README.md  detect-markdown.md  generate_showcase.py
examples/ci/: breaking-change.yml
examples/showcase-click/: extension-points.json  index.md  plugin-guide.md
examples/showcase-click/examples/: click_decorators_confirmation_option.py  click_decorators_version_option.py  click_types_ParamType.py
modscan/: __init__.py  cli.py  config_scan.py  detector.py  diff.py  docgen.py  execution.py  factblocks.py  fsutil.py  graph.py  manifest.py  mcp_server.py  models.py  parser.py  preflight.py  prompts.py  sandbox.py  scaffold.py  validator.py
modscan/docgen/: __init__.py  examples.py  pipeline.py  render.py  types.py
modscan/languages/: __init__.py  base.py  java.py  python.py  typescript.py
modscan/providers/: __init__.py  anthropic.py  base.py  budget.py  cache.py  gemini.py  openai_compat.py
modscan/security/: __init__.py  cli.py  detect.py  detect_java.py  detect_ts.py  report.py  sinks.py  sinks_java.py  sinks_ts.py  surface_diff.py
security-crosscheck/: README.md  crosscheck.py  crosscheck_ts.py
security-crosscheck/js/: eslint.config.mjs  package-lock.json  package.json
tests/: test_benchmark_labels.py  test_benchmark_scoring.py  test_budget.py  test_cli.py  test_detector.py  test_diff.py  test_docgen.py  test_factblocks.py  test_java.py  test_live_smoke.py  test_manifest.py  test_mcp_server.py  test_parser.py  test_preflight.py  test_providers.py  test_sandbox.py  test_scaffold.py  test_security_java_sinks.py  test_security_report.py  test_security_sinks.py  test_security_surface_diff.py  test_security_ts_sinks.py  test_typescript.py  test_usage_crosscheck.py  test_validator.py
usage-crosscheck/: README.md  crosscheck_usage.py  downstream.json
