[project]
name = "modscan"
version = "0.0.1"
description = "Scan a codebase, generate everything needed to write plugins and mods for it"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
gemini = ["google-generativeai>=0.8"]

[project.scripts]
modscan = "modscan.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modscan*"]
