[project]
name = "modscan"
version = "0.1.3"
description = "Scan a codebase, generate everything needed to write plugins and mods for it"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Rinkia" }]
keywords = [
    "plugins",
    "mods",
    "modding",
    "extension-points",
    "documentation-generator",
    "static-analysis",
    "llm",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
typescript = ["tree-sitter>=0.21", "tree-sitter-typescript>=0.21"]
gemini = ["google-generativeai>=0.8"]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/Rinkia/modscan"
Repository = "https://github.com/Rinkia/modscan"
Issues = "https://github.com/Rinkia/modscan/issues"
Changelog = "https://github.com/Rinkia/modscan/blob/master/CHANGELOG.md"

[project.scripts]
modscan = "modscan.cli:main"
modscan-mcp = "modscan.mcp_server:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modscan*"]
